Rough questions formulated

--- a/Intro_Stats-Duke/1-Intro_to_Probability_and_Data/Week_5/intro_data_prob_project.Rmd
+++ b/Intro_Stats-Duke/1-Intro_to_Probability_and_Data/Week_5/intro_data_prob_project.Rmd
@@ -46,11 +46,12 @@ immunity's effectiveness is susceptible to deviations from "normalcy" by small g
 ## Part 2: Research questions
 
 **Research quesion 1:**
-
+What is the relation between mental health and state residency?
 **Research quesion 2:**
-
+Do Students who live on campus have different sleeping habits?
 **Research quesion 3:**
-
+Do the financially insecure live in a harsher world? (subject to data availability)
+snctmony and misphlpf
 
 * * *
 
