--- a/Intro_Stats-Duke/1-Intro_to_Probability_and_Data/Week_5/intro_data_prob_project.Rmd
+++ b/Intro_Stats-Duke/1-Intro_to_Probability_and_Data/Week_5/intro_data_prob_project.Rmd
@@ -14,6 +14,7 @@ output:
 ```{r load-packages, message = FALSE}
 library(ggplot2)
 library(dplyr)
+library(maps)
 ```
 
 ### Load data
@@ -64,7 +65,46 @@ in the project you submit. Delete this note when before you submit your work.
 **Research quesion 1:**
 
 ```{r}
+sadstate <- brfss2013 %>%
+  select(X_state, menthlth) %>%
+  filter(menthlth <= 31) %>% # Can't have more bad days than there are in a month
+  na.omit()
+colnames(sadstate) <- c("state", "mntl")
 
+p <- ggplot(data = sadstate, aes(x = mntl)) +
+  geom_bar() +
+  labs(title = "Poor Mental Health Days per Respondent",
+       x = "Number of bad mental health days in the past month",
+       y = "Number of respondents")
+p
+```
+ The data are heavily right skewed, so mean is unreliable.
+```{r}
+natl_avg_bad_days <- mean(sadstate$mntl)
+natl_med_bad_days <- median(sadstate$mntl)
+
+bad_days_by_state <- sadstate %>%
+  group_by(state) %>%
+  summarise(state_avg = mean(mntl)) %>%
+  mutate(dev = state_avg - natl_avg_bad_days)
+
+p <- ggplot(data = bad_days_by_state %>%
+              arrange(desc(state_avg)), aes(x = reorder(state, state_avg), y = state_avg)) +
+  geom_point() +
+  theme(axis.text.x = element_text(angle=90)) +
+  labs(title = "Average Poor Mental Health Days per State",
+       x = "State",
+       y = "Average Days per Month of Poor Mental Health") +
+  coord_flip()
+
+# TODO: Make a divergent color map centered at 0, use dev and map states with deviation
+range_dev <- range(bad_days_by_state$dev)
+
+# geom_polygon(data = bad_days_by_state, aes(fill = dev)) +
+# scale_fill_gradient(colors = c(blue, white, orange),
+#                    breaks = c(-1, 0, 1))
+
+usa <- map_data("usa")
 ```
 
 
@@ -72,7 +112,7 @@ in the project you submit. Delete this note when before you submit your work.
 **Research quesion 2:**
 
 ```{r}
-
+brfss2013$sleptim1
 ```
 
 
