--- a/Intro_Stats-Duke/1-Intro_to_Probability_and_Data/Week_5/intro_data_prob_project.Rmd
+++ b/Intro_Stats-Duke/1-Intro_to_Probability_and_Data/Week_5/intro_data_prob_project.Rmd
@@ -126,23 +126,37 @@ ggplot(data = dep_chk, aes(x = dd, y = mntl / 30 * 100)) +
   theme(legend.position = "None")
 
 dep_cmp <- ggplot(data = dep_chk, aes(x = mntl)) +
-#  scale_y_continuous() +
-  guides(fill = guide_legend(title = "Diagnosed Depression"))
+  guides(fill = guide_legend(title = "Diagnosed Depression")) +
+  labs(title = "Proportion of Depression Diagnoses and Reported Poor Mental Health Days",
+       x = "Number of Poor Mental Health Days")
 
 dep_cmp +
-  geom_bar(aes(fill = dd), position = "fill") +
-  geom_hline(yintercept = 0.5, alpha = 0.7, color = "red")
+  geom_bar(aes(fill = dd), position = position_dodge(0.9)) +
+  ylab("Number of Respondents")
 
 dep_cmp +
-  geom_bar(aes(fill = dd), position = position_dodge(0.9))
+  geom_bar(aes(fill = dd), position = "fill", alpha = 0.7) +
+  geom_hline(yintercept = 0.5, alpha = 0.3, color = "red") +
+  labs(x = "Number of Poor Mental Health Days",
+       y = "Proportion of Respondents")
 ```
 
 People with diagnosed depression represent a majority of those who had 15 or more poor mental health days in the past 30 days.  
 
-$ P(Depressed|\textup{More than 1 bad day} ) $
+\[
+\begin{eqnarray}
 
+DD & = & \text{Individual has diagnosed depression} \\
+1+ & = & \text{Individual has had 1 or more poor mental health days in the 30 prior to being surveyed}\\
+\\
+P( DD | 1+ ) & = & \frac{P( 1+ | DD) P(DD)}{P(1+)}
 
-#TODO: Bayesian probability of being depressed given 30 bad days.
+\end{eqnarray}
+ \]
+
+```{r}
+P_DD = 
+```
 
 Unsurprisingly, people with diagnosed depressive disorders experience worse mental health!
 
@@ -177,21 +191,32 @@ pmh_lolliplot
 
 library(maps)
 
-# geo <- geocode(location = as.character(bad_days_by_state$state), output = "latlon")
-
-#bad_days_by_state$lat <- geo$lat
-#bad_days_by_state$lon <- geo$lon
-
 range_avg_dev <- range(bad_days_by_state$avg_dev)
 range_arange_med_dev <- range(bad_days_by_state$med_dev)
 
 usa <- map_data("usa")
 
-#ggplot(data = states) + 
-#  geom_polygon(aes(x = long, y = lat, fill = bad_days_by_state$avg_dev, group = group), color = "white") + 
-#  coord_fixed(1.3) +
-#  guides(fill=FALSE)
-  
+states <- map_data("state")
+
+# Credit: http://eriqande.github.io/rep-res-web/lectures/making-maps-with-R.html
+ditch_the_axes <- theme(
+  axis.text = element_blank(),
+  axis.line = element_blank(),
+  axis.ticks = element_blank(),
+  panel.border = element_blank(),
+  panel.grid = element_blank(),
+  axis.title = element_blank()
+  )
+
+bad_days_by_state <- bad_days_by_state %>%
+  mutate(region = as.character(tolower(state)))
+
+bad_state <-inner_join(bad_days_by_state, states, by = "region")
+
+ggplot(data = bad_state) + 
+  geom_polygon(aes(x = long, y = lat, fill = avg_dev, group = group), color = "white") + 
+  coord_fixed(1.3) +
+  guides(fill=FALSE) + ditch_the_axes
 
 #pmh_map <- ggplot() +
 #  geom_polygon(data = bad_days_by_state %>% na.omit(),
